objects/SuperOrder__c.object
<CustomObject><fields>
        <fullName>Follow_up_Details__c</fullName>
        <label>Follow-up Details</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Follow_up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers case creation in the Support queue</description>
        <inlineHelpText>Triggers case creation in the Support queue</inlineHelpText>
        <label>Follow-up Required</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Fully_Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All lines related to this SuperOrder have shipped out. Populated by trigger</description>
        <inlineHelpText>All lines related to this SuperOrder have shipped out.</inlineHelpText>
        <label>Fully Shipped</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if a superorder is a gift or not</description>
        <label>Gift</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Netsuite_Integration_Error_Details__c</fullName>
        <label>Netsuite Integration Error Details</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Netsuite_SuperOrder_Integration_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked via WFR when conditions require SFDC-Boomi-NS integration due to SuperOrder Updates.</description>
        <inlineHelpText>Checked via WFR when conditions require SFDC-Boomi-NS integration due to SuperOrder Updates.</inlineHelpText>
        <label>Netsuite SuperOrder Integration Trigger</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>PartnerChannelOrderNumber__c</fullName>
        <description>Unique Key on SuperOrder to ensure duplicate orders are prevented. Concatenation of Partner ID and Partner Order Number.</description>
        <inlineHelpText>Unique Key on SuperOrder to ensure duplicate orders are prevented. Concatenation of Partner ID and Partner Order Number.</inlineHelpText>
        <label>PartnerChannelOrderNumber</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Partner_ID__c</fullName>
        <description>Partner ID for the Partner Channel associated to this SuperOrder</description>
        <formula>Partner_Channel__r.Partner_ID__c</formula>
        <inlineHelpText>Partner ID for the Partner Channel associated to this SuperOrder</inlineHelpText>
        <label>Partner ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Partner_Order_Number__c</fullName>
        <description>Order Number supplied by the Partner.</description>
        <inlineHelpText>Order Number supplied by the Partner.</inlineHelpText>
        <label>Partner Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Payment_Captured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When payment capture is set to true, SFDC needs to notify NS that the "Credit Card Charged" field should be set to true. 

When payment capture is set to false, SFDC should still create the SO, WO, and PO, but the "Credit Card Charged" field should be set to false on the SO.</description>
        <inlineHelpText>Stripe payment status submitted by HM and relayed to "Credit Card Charged" field in Netsuite.</inlineHelpText>
        <label>Payment Captured</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Payment_Captured_in_Netsuite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Payment Captured successfully transferred to Netsuite.</inlineHelpText>
        <label>Payment Captured in Netsuite</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Stripe_Customer_ID__c</fullName>
        <description>Used by HM if charge authorization has expired.</description>
        <inlineHelpText>Used by HM if charge authorization has expired.</inlineHelpText>
        <label>Stripe Customer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SuperOrder_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SuperOrder Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Amount_Charged__c</fullName>
        <label>Total Amount Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Net_Amount__c</fullName>
        <description>Calculates the Net amount from the Total Amount Charged - Total Amount Refunded Amount</description>
        <formula>Total_Amount_Charged__c -  Total_Refunded_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the Net amount from the Total Amount Charged - Total Amount Refunded Amount</inlineHelpText>
        <label>Total Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Refunded_Amount__c</fullName>
        <description>Currency field that captures the sum of all Order Event records of the Refund type. Used in calculating the Net Amount of a Super Order.</description>
        <inlineHelpText>Currency field that captures the sum of all Order Event records of the Refund type. Used in calculating the Net Amount of a Super Order.</inlineHelpText>
        <label>Total Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Tax__c</fullName>
        <label>Total Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>transactionid__c</fullName>
        <description>Transaction ID passed by payment partner to Helix Marketplace and then SFDC</description>
        <inlineHelpText>Transaction ID passed by payment partner to Helix Marketplace and then SFDC</inlineHelpText>
        <label>Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Collection of Orders related to a single order placed by the end user.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>SuperOrder</label><nameField>
        <displayFormat>HX{00000000}</displayFormat>
        <label>SuperOrder Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>SuperOrders</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>Created_By_Shirish_Today</fullName>
        <columns>NAME</columns>
        <columns>Fully_Shipped__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Shirish Goel</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Fully_Shipped__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Created By Shirish Today</label>
    </listViews><listViews>
        <fullName>Today_s_SuperOrders</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today's SuperOrders</label>
    </listViews></CustomObject>